--- a/app/src/main/res/layout/activity_match.xml
+++ b/app/src/main/res/layout/activity_match.xml
@@ -21,17 +21,9 @@
 
 
     <variable
-        name="eRes1"
-        type="com.example.imperium_scorpio.match.viewmodels.Resource" />
-    <variable
-        name="eRes2"
-        type="com.example.imperium_scorpio.match.viewmodels.Resource" />
-    <variable
-        name="eRes3"
-        type="com.example.imperium_scorpio.match.viewmodels.Resource" />
-    <variable
-        name="eRes4"
-        type="com.example.imperium_scorpio.match.viewmodels.Resource" />
+        name="enemy"
+        type="com.example.imperium_scorpio.match.viewmodels.Enemy" />
+
     <variable
         name="pRes1"
         type="com.example.imperium_scorpio.match.viewmodels.Resource" />
@@ -232,7 +224,7 @@
         android:paddingTop="2dp"
         android:paddingRight="8dp"
         android:paddingBottom="2dp"
-        android:text="@{eRes1.res.toString}"
+        android:text="@{enemy.eRes[0].res.toString}"
         android:textAlignment="center"
         android:textColor="@color/white"
         android:textSize="20sp"
@@ -250,7 +242,7 @@
         android:paddingTop="2dp"
         android:paddingRight="8dp"
         android:paddingBottom="2dp"
-        android:text="@{eRes2.res.toString}"
+        android:text="@{enemy.eRes[1].res.toString}"
         android:textAlignment="center"
         android:textColor="@color/black"
         android:textSize="20sp"
@@ -269,7 +261,7 @@
         android:paddingTop="2dp"
         android:paddingRight="8dp"
         android:paddingBottom="2dp"
-        android:text="@{eRes3.res.toString}"
+        android:text="@{enemy.eRes[2].res.toString}"
         android:textAlignment="center"
         android:textColor="@color/white"
         android:textSize="20sp"
@@ -288,7 +280,7 @@
         android:paddingTop="2dp"
         android:paddingRight="8dp"
         android:paddingBottom="2dp"
-        android:text="@{eRes4.res.toString}"
+        android:text="@{enemy.eRes[3].res.toString}"
         android:textAlignment="center"
         android:textColor="@color/black"
         android:textSize="20sp"
@@ -308,7 +300,7 @@
         app:layout_constraintVertical_bias="0.060000002"
         app:srcCompat="@drawable/retro_carta"
         tools:srcCompat="@drawable/retro_carta"
-        tools:visibility="visible" />
+        android:visibility="@{enemy.card3}" />
 
     <ImageView
         android:id="@+id/eC1"
@@ -321,7 +313,8 @@
         app:layout_constraintVertical_bias="0.0"
         app:srcCompat="@drawable/retro_carta"
         tools:srcCompat="@drawable/retro_carta"
-        tools:visibility="visible" />
+        tools:visibility="visible"
+        android:visibility="@{enemy.card1}"/>
 
     <ImageView
         android:id="@+id/eC2"
@@ -332,7 +325,8 @@
         app:layout_constraintEnd_toStartOf="@+id/eC3"
         app:layout_constraintTop_toTopOf="@+id/eC3"
         app:srcCompat="@drawable/retro_carta"
-        tools:srcCompat="@drawable/retro_carta" />
+        tools:srcCompat="@drawable/retro_carta"
+        android:visibility="@{enemy.card2}"/>
 
     <ImageView
         android:id="@+id/eC4"
@@ -343,7 +337,8 @@
         app:layout_constraintStart_toEndOf="@+id/eC3"
         app:layout_constraintTop_toTopOf="@+id/eC3"
         app:srcCompat="@drawable/retro_carta"
-        tools:srcCompat="@drawable/retro_carta" />
+        tools:srcCompat="@drawable/retro_carta"
+        android:visibility="@{enemy.card4}"/>
 
     <ImageView
         android:id="@+id/eC5"
@@ -354,7 +349,8 @@
         app:layout_constraintStart_toEndOf="@+id/eC3"
         app:layout_constraintTop_toTopOf="@+id/eC3"
         app:srcCompat="@drawable/retro_carta"
-        tools:srcCompat="@drawable/retro_carta" />
+        tools:srcCompat="@drawable/retro_carta"
+        android:visibility="@{enemy.card5}"/>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/HandCard3"
@@ -2864,7 +2860,7 @@
         app:layout_constraintStart_toStartOf="@+id/match_background"
         app:layout_constraintTop_toTopOf="@+id/match_background"
         app:layout_constraintVertical_bias="0.23"
-        tools:visibility="visible">
+        tools:visibility="gone">
 
         <ImageView
             android:id="@+id/CardBackGround"
